--- a/src/gcweb/footer.ejs
+++ b/src/gcweb/footer.ejs
@@ -115,7 +115,7 @@
                 <%_ } -%>
             </nav>
             <div class="wtrmrk align-self-end">
-                <img src="https://wet-boew.github.io/themes-dist/GCWeb/GCWeb/assets/wmms-blk.svg" alt="<^- msg('Symbol of the Government of Canada') ^>">
+                <img src="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/wmms-blk.svg" alt="<^- msg('Symbol of the Government of Canada') ^>">
             </div>
         </div>
     </div>
