--- a/src/gcintranet/serverRefTop.ejs
+++ b/src/gcintranet/serverRefTop.ejs
@@ -2,8 +2,8 @@
 <link href="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/assets/favicon.ico" rel="icon" type="image/x-icon">
 <%# Only output css links if not directed to ignore -%>
 <% if (!pr.cdtsSetupExcludeCSS) { -%>
-    <link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/css/theme.min.css">
-    <link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>cdts/cdtsfixes.css">
+    <link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>wet-boew/css/theme.min.css"<% if (pr.sriEnabled) { %> integrity="<^- sriHash('public/wet/wet-boew/css/theme.min.css') ^>" crossorigin="anonymous"<% } %>>
+    <link rel="stylesheet" href="<%- wet.builder.environment(pr.cdnEnv) %>cdts/cdtsfixes.css"<% if (pr.sriEnabled) { %> integrity="<^- sriHash('public/gcintranet/cdtsfixes.css') ^>" crossorigin="anonymous"<% } %>>
 <% } -%>
 <!--<![endif]-->
 <!--[if lt IE 9]>
