--- a/src/gcweb/preFooter.ejs
+++ b/src/gcweb/preFooter.ejs
@@ -17,12 +17,20 @@
             <div class="row">
                 <%_ if (pr.showFeedback != false) { -%>
                     <%_ if (pr.showFeedback != null && pr.showFeedback != true) { -%>
-                        <div class="col-sm-6 col-md-5 col-lg-4">
-                            <a href="<%- pr.showFeedback %>" class="btn btn-default btn-center"><^- msg('Report a problem on this page') ^></a>
+                        <div data-ajax-replace="../ajax/report-problem-en.html">
+                            <div class="row row-no-gutters">
+                                <div class="col-sm-9 col-md-6 col-lg-5">
+                                    <a class="btn btn-default btn-block" href="<%- pr.showFeedback %>"><^- msg('Report a problem on this page') ^></a>
+                                </div>
+                            </div>
                         </div>
                     <%_ } else { -%>
-                        <div class="col-sm-6 col-md-5 col-lg-4">
-                            <a href="<^- msg('https://www.canada.ca/en/report-problem.html') ^>" class="btn btn-default btn-center"><^- msg('Report a problem on this page') ^></a>
+                        <div data-ajax-replace="<^- msg('../ajax/report-problem-en.html') ^>">
+                            <div class="row row-no-gutters">
+                                <div class="col-sm-9 col-md-6 col-lg-5">
+                                    <a class="btn btn-default btn-block" href="<^- msg('https://www.canada.ca/en/report-problem.html') ^>"><^- msg('Report a problem on this page') ^></a>
+                                </div>
+                            </div>
                         </div>
                     <%_ } -%>
                 <%_ } -%>
