Updating intraweb text

--- a/src/gcintranet/appFooter.ejs
+++ b/src/gcintranet/appFooter.ejs
@@ -2,7 +2,7 @@
  * This is all of the html to be included after existing page content.
  * @param? showFeatures Used to determine if the "GoC activities and initiatives" section will be displayed.
  * @param? subTheme Used to identify the custom subTheme.
- * @param? footerPath Local path for footer 
+ * @param? footerPath Local path for footer
  * @param? footerSections Loops of the sections in the footer.
  * @param? globalNav Loops of the sections in the footer.
  * @param? cdnEnv Used to switch between qat, nonprod, and prod CDN implementations.
@@ -15,7 +15,7 @@
         <nav role="navigation" class="container wb-navcurr">
             <h2 class="wb-inv"><^- msg('Related links') ^></h2>
             <div class="row">
-                <%_ for (var sectionIndex=0; sectionIndex<pr.footerSections.length; sectionIndex++) { 
+                <%_ for (var sectionIndex=0; sectionIndex<pr.footerSections.length; sectionIndex++) {
                     const footerSection=pr.footerSections[sectionIndex];-%>
                     <%_ if (footerSection.customFooterLinks != null) { -%>
                         <%_ if (sectionIndex < 3) { -%>
@@ -24,7 +24,7 @@
                                     <h3><%= footerSection.sectionName %></h3>
                                 <%_ } -%>
                                 <ul class="list-unstyled">
-                                    <%_ for (var linkIndex=0; linkIndex<footerSection.customFooterLinks.length; linkIndex++) { 
+                                    <%_ for (var linkIndex=0; linkIndex<footerSection.customFooterLinks.length; linkIndex++) {
                                         const link=footerSection.customFooterLinks[linkIndex];-%>
                                         <li><a href="<%- link.href %>"<%- (link.newWindow==true)? ' target="_blank"  rel="noopener"': '' %>><%= link.text %><%_ if (link.newWindow==true) { -%><span class="wb-inv"> <^- msg('This link will open in a new window') ^></span><%_ } -%></a></li>
                                     <%_ } -%>
@@ -37,7 +37,7 @@
                                 <h3><%= footerSection.sectionName %></h3>
                             <%_ } -%>
                             <ul class="list-unstyled">
-                                <%_ for (var linkIndex=0; linkIndex<pr.footerSections.length; linkIndex++) { 
+                                <%_ for (var linkIndex=0; linkIndex<pr.footerSections.length; linkIndex++) {
                                     const link=pr.footerSections[linkIndex];-%>
                                     <li><a href="<%- link.href %>"<%- (link.newWindow==true)? ' target="_blank"  rel="noopener"': '' %>><%= link.text %><%_ if (link.newWindow==true) { -%><span class="wb-inv"> <^- msg('This link will open in a new window') ^></span><%_ } -%></a></li>
                                 <%_ } -%>
@@ -49,7 +49,7 @@
                     <section class="col-md-3 col-sm-6 col-lg-3">
                         <h3><^- msg('Corporate') ^></h3>
                         <ul class="list-unstyled">
-                            <li><a href="<^- msg('https://esdc.prv/en/branches_regions/index.shtml') ^>"><^- msg('ESDC/SC IntraWeb') ^></a></li>
+                            <li><a href="<^- msg('https://esdc.prv/en/branches_regions/index.shtml') ^>"><^- msg('ESDC/SC Intranet') ^></a></li>
                             <li><a href="<^- msg('https://esdc.prv/en/news/index.shtml') ^>"><^- msg('News') ^></a></li>
                             <li><a href="<^- msg('https://esdc.prv/en/contact/index.shtml') ^>"><^- msg('Contact and Feedback') ^></a></li>
                             <li><a href="<^- msg('https://esdc.prv/en/stay_connected/index.shtml') ^>"><^- msg('Stay Connected') ^></a></li>
