New small corrections to Canada.ca footer

--- a/src/gcweb/footer.ejs
+++ b/src/gcweb/footer.ejs
@@ -35,9 +35,9 @@
                     <ul class="list-col-xs-1 list-col-sm-2 list-col-md-3">
                         <%_ if (pr.contactLinks != null && pr.contactLinks.length > 0) {
                             const link=pr.contactLinks[0]; -%>
-                            <li><a href="<%- link.href %>"><^- msg('All Contacts') ^></a></li>
+                            <li><a href="<%- link.href %>"><^- msg('All contacts') ^></a></li>
                         <%_ } else { -%>
-                            <li><a href="<^- msg('https://www.canada.ca/en/contact.html') ^>"><^- msg('All Contacts') ^></a></li>
+                            <li><a href="<^- msg('https://www.canada.ca/en/contact.html') ^>"><^- msg('All contacts') ^></a></li>
                         <%_ } -%>
                         <li><a href="<^- msg('https://www.canada.ca/en/government/dept.html') ^>"><^- msg('Departments and agencies') ^></a></li>
                         <li><a href="<^- msg('https://www.canada.ca/en/government/system.html') ^>"><^- msg('About government') ^></a></li>
@@ -60,7 +60,7 @@
                         <li><a href="<^- msg('https://www.canada.ca/en/services/finance.html') ^>"><^- msg('Money and finance') ^></a></li>
                         <li><a href="<^- msg('https://www.canada.ca/en/services/science.html') ^>"><^- msg('Science and innovation') ^></a></li>
                         <li><a href="<^- msg('https://www.canada.ca/en/services/indigenous-peoples.html') ^>"><^- msg('Indigenous peoples') ^></a></li>
-                        <li><a href="<^- msg('https://www.canada.ca/en/services/veterans.html') ^>"><^- msg('Veterans and military') ^></a></li>
+                        <li><a href="<^- msg('https://www.canada.ca/en/services/veterans-military.html') ^>"><^- msg('Veterans and military') ^></a></li>
                         <li><a href="<^- msg('https://www.canada.ca/en/services/youth.html') ^>"><^- msg('Youth') ^></a></li>
                     </ul>
                 </nav>
