--- a/public/gcweb/cdtsfixes.css
+++ b/public/gcweb/cdtsfixes.css
@@ -144,23 +144,30 @@
     padding-top: 6px;
     font-size: 23px;
     margin-left: 20px;
+    margin-right: 15px;
     vertical-align: sub;
 }
 
 .cdts-menu-label{
     display: inline-block !important;
-    width: 154px;
+    width: 260px;
     text-align: initial !important;
     font-size: 18px;
     line-height: 20px;
     color: #26374A;
     font-weight: bold;
-    margin-left: 15px;
-    padding-left: 0 !important;
-    padding-right: 0 !important;
+    padding: 0 !important;
+    margin: 8px 0 8px 0;
 }
 .cdts-menu-label:hover, .cdts-menu-label:visited{
     color: #26374A;
+}
+
+.cdts-menu-chevron{
+    float: right;
+    margin-top: 12px;
+    margin-right: 20px;
+    font-size: 12px;
 }
 
 .cdts-menu-chevron-up{
@@ -209,6 +216,10 @@
 
 .wb-menu .sm-open .cdts-menu-chevron-up{
     display: inline;
+    float: right;
+    margin-top: 12px;
+    margin-right: 20px;
+    font-size: 12px;
 }
 
 .wb-menu .sm-open .cdts-menu-chevron{
@@ -237,13 +248,11 @@
 
     .cdts-menu-chevron-up{
         float: right;
-        padding-top: 18px;
         margin-right: 20px;
     }
 
     .cdts-menu-chevron{
         float: right;
-        padding-top: 18px;
         margin-right: 20px;
     }
 
@@ -252,13 +261,13 @@
     }
 
     .cdts-menu-label{
-        width: 76%;
+        width: 100%;
     }
 }
 
 @media (max-width: 480px) {
     .cdts-menu-label{
-        width: 65%;
+        width: 100%;
     }
 }
 
