Fixing menu text

--- a/src/gcweb/appTop.ejs
+++ b/src/gcweb/appTop.ejs
@@ -114,7 +114,7 @@
                 <%_ if (pr.headerMenu != null && pr.menuPath == null && pr.menuLinks == null) {
                     const item=pr.headerMenu[0]; -%>
                     <div class="cdts-hidden" aria-hidden="true">
-                        <ul><li id="wb-glb-mn"><a href="#mb-pnl"></a><h2>Hidden</h2></li></ul>
+                        <ul><li id="wb-glb-mn"><a href="#mb-pnl"></a><h2><^- msg('Menu') ^></h2></li></ul>
                         <div id="mb-pnl"></div>
                     </div>
                     <nav id="cdts-header-menu" data-trgt="mb-pnl" class="cdts-menu-rectangle wb-menu" typeof="SiteNavigationElement" aria-labelledby="appNavMenu">
