--- a/src/gcweb/appTop.ejs
+++ b/src/gcweb/appTop.ejs
@@ -111,16 +111,17 @@
                     <a class="app-name" href="<%- item.href %>"><%= item.text%></a>
                 <%_ } -%>
                 </section>
-                <%_ if (pr.headerMenu != null) {
+                <%_ if (pr.headerMenu != null && pr.menuPath == null && pr.menuLinks == null) {
                     const item=pr.headerMenu[0]; -%>
-                    <nav id="cdts-header-menu" class="cdts-menu-rectangle wb-menu" typeof="SiteNavigationElement" aria-labelledby="appNavMenu">
+                    <div class="cdts-hidden" aria-hidden="true">
+                        <ul><li id="wb-glb-mn"><a href="#mb-pnl"></a><h2><^- msg('Menu') ^></h2></li></ul>
+                        <div id="mb-pnl"></div>
+                    </div>
+                    <nav id="cdts-header-menu" data-trgt="mb-pnl" class="cdts-menu-rectangle wb-menu" typeof="SiteNavigationElement" aria-labelledby="appNavMenu">
                         <h2 class="wb-inv" id="appNavMenu"><^- msg('Header navigation menu') ^></h2>
                         <ul class="list-inline menu" role="menubar">
                             <li role="none" class="cdts-menu-list-width">
-                            <span class="glyphicon glyphicon-user cdts-menu-icon"></span>
-                            <a href="#" class="cdts-menu-label item" role="menuitem" aria-haspopup="true"><%= (pr.headerMenu.text == null)? ' <^- msg('Account') ^>': pr.headerMenu.text %></a>
-                            <span class="glyphicon glyphicon-chevron-down cdts-menu-chevron"></span>
-                            <span class="glyphicon glyphicon-chevron-up cdts-menu-chevron-up"></span>
+                            <a href="#" class="cdts-menu-label item" role="menuitem" aria-haspopup="true"><span class="glyphicon glyphicon-user cdts-menu-icon"></span><%= (pr.headerMenu.text == null)? ' <^- msg('Account') ^>': pr.headerMenu.text %><span class="glyphicon glyphicon-chevron-down cdts-menu-chevron"></span><span class="glyphicon glyphicon-chevron-up cdts-menu-chevron-up"></span></a>
                             <%_ if (pr.headerMenu.links != null) { -%>
                                 <ul class="sm list-unstyled cdts-menu-list" role="menu">
                                     <%_ for (var hiddenIndex=0; hiddenIndex<pr.headerMenu.links.length; hiddenIndex++) {
