--- a/public/wet/wet-boew/css/theme-srv.css
+++ b/public/wet/wet-boew/css/theme-srv.css
@@ -2,7 +2,7 @@
 /*!
  * @title Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
  * @license wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html
- * v13.3.0 - 2023-05-30
+ * v13.7.2 - 2023-08-29
  *
  */
 /*!
@@ -5853,14 +5853,35 @@ a {
 		padding: 10px 10px 10px 0;
 		text-align: left;
 		white-space: normal;
+		width: 20ch;
 		word-break: break-word; }
 	.dl-horizontal dd {
 		border-top: 1px solid #ccc;
 		margin-bottom: 3px;
-		margin-left: 160px;
+		margin-left: 20ch;
 		padding: 10px 10px 10px 0; }
 	.dl-horizontal dt + dd {
-		padding-bottom: 0; } }
+		padding-bottom: 0; }
+	.dl-horizontal.dt-max {
+		display: grid;
+		grid-template-columns: minmax(-webkit-min-content, -webkit-min-content) auto;
+		grid-template-columns: minmax(min-content, min-content) auto; }
+		.dl-horizontal.dt-max dt {
+			-ms-hyphens: none;
+			-webkit-hyphens: none;
+			hyphens: none;
+			min-width: 20ch;
+			white-space: normal;
+			width: auto;
+			word-break: initial; }
+		.dl-horizontal.dt-max dd {
+			margin-left: 0; } }
+
+.dl-inline dt, .dl-inline dd {
+	display: inline; }
+
+.dl-inline dd + dt {
+	margin-left: 15px; }
 
 /*
  *  Abbreviations with title attributes
@@ -8066,14 +8087,35 @@ a {
 		padding: 10px 10px 10px 0;
 		text-align: left;
 		white-space: normal;
+		width: 20ch;
 		word-break: break-word; }
 	.dl-horizontal dd {
 		border-top: 1px solid #ccc;
 		margin-bottom: 3px;
-		margin-left: 160px;
+		margin-left: 20ch;
 		padding: 10px 10px 10px 0; }
 	.dl-horizontal dt + dd {
-		padding-bottom: 0; } }
+		padding-bottom: 0; }
+	.dl-horizontal.dt-max {
+		display: grid;
+		grid-template-columns: minmax(-webkit-min-content, -webkit-min-content) auto;
+		grid-template-columns: minmax(min-content, min-content) auto; }
+		.dl-horizontal.dt-max dt {
+			-ms-hyphens: none;
+			-webkit-hyphens: none;
+			hyphens: none;
+			min-width: 20ch;
+			white-space: normal;
+			width: auto;
+			word-break: initial; }
+		.dl-horizontal.dt-max dd {
+			margin-left: 0; } }
+
+.dl-inline dt, .dl-inline dd {
+	display: inline; }
+
+.dl-inline dd + dt {
+	margin-left: 15px; }
 
 /*
  *  Abbreviations with title attributes
@@ -15398,6 +15440,18 @@ table.dataTable {
 .wb-tgfltr-out {
 	display: none !important; }
 
+.wb-tagfilter-noresult {
+	display: none; }
+
+.wb-tagfilter-items:not(:has([data-wb-tags]:not(.wb-tgfltr-out):not(.wb-fltr-out))) + .wb-tagfilter-noresult {
+	display: block; }
+
+.wb-tagfilter-items:has(+ .wb-tagfilter-noresult):not(:has([data-wb-tags]:not(.wb-tgfltr-out):not(.wb-fltr-out))) {
+	display: none; }
+
+html:not(.wb-disable) .wb-tagfilter-items:not(:has([data-wb-tags])) + .wb-tagfilter-noresult {
+	display: none !important; }
+
 /*
  * Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW)
  * wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html
@@ -16073,6 +16127,28 @@ ol-geolocate button {
 	border: none;
 	padding: 0; }
 
+.wb-paginate-pager {
+	text-align: center; }
+	.wb-paginate-pager .paginate-prev::before,
+	.wb-paginate-pager .paginate-next::after {
+		font-family: "Glyphicons Halflings";
+		font-weight: 400;
+		line-height: 1em;
+		position: relative;
+		top: .1em; }
+	.wb-paginate-pager .paginate-prev::before {
+		content: "\e091";
+		margin-right: .5em; }
+	.wb-paginate-pager .paginate-next::after {
+		content: "\e092";
+		margin-left: .5em; }
+	.wb-paginate-pager li.active:nth-last-child(2) a {
+		border-bottom-right-radius: 4px;
+		border-top-right-radius: 4px; }
+
+html:not(.wb-disable) .wb-pgfltr-out {
+	display: none !important; }
+
 /*! Core - Utilities */
 .clearfix:before, .clearfix:after {
 	display: table;
@@ -16622,6 +16698,13 @@ a.text-white:hover, a.text-white:focus {
 
 button.bg-dark:hover, button.bg-dark:focus {
 	background-color: #1d2124; }
+
+/*
+Panels
+ */
+.panel:not(:has(.panel, .well)):has(.stretched-link):hover, .panel:not(:has(.panel, .well)):has(.stretched-link:focus), .well:not(:has(.panel, .well)):has(.stretched-link):hover, .well:not(:has(.panel, .well)):has(.stretched-link:focus) {
+	-webkit-box-shadow: 1px 5px 7px rgba(0, 0, 0, 0.15);
+	        box-shadow: 1px 5px 7px rgba(0, 0, 0, 0.15); }
 
 /*
 Miscellaneous Utiliy CSS
