--- a/src/gcweb/preFooter.ejs
+++ b/src/gcweb/preFooter.ejs
@@ -11,23 +11,40 @@
 -%>
 <%_ if (pr.showPostContent != false) { -%>
 <%_ } -%>
+<%_
+    //Preserving backwards compatibility with boolean values
+    if (pr.showFeedback === true) {
+        pr.showFeedback = {
+            enabled: true
+        }
+    }
+    else if (pr.showFeedback == null || pr.showFeedback === false) {
+        pr.showFeedback = {
+            enabled: false
+        }
+    }
+
+    //If showFeedback is enabled, checking for mandatory meta element
+    if (pr.showFeedback.enabled == true && document.head.querySelector('meta[name="dcterms.creator"]') == null) {
+        pr.showFeedback.enabled = false;
+    }
+-%>
 <section class="pagedetails">
     <h2 class="wb-inv">Page details</h2>
     <div class="row">
-        <%_ if (pr.showFeedback != null) { -%>
+        <%_ if (pr.showFeedback.enabled == true) { -%>
             <div class="col-sm-8 col-md-9 col-lg-9">
-                <div data-ajax-replace="<^- msg('https://www.canada.ca/etc/designs/canada/wet-boew/assets/feedback/page-feedback-en.html') ^>" class="wb-disable-allow" data-feedback-link="<%= pr.showFeedback.text %>" data-feedback-url="<%= pr.showFeedback.url %>" data-feedback-section="<%= pr.showFeedback.section %>" data-feedback-theme="<%= pr.showFeedback.theme %>">
-                </div>
+                <div data-ajax-replace="<^- msg('https://www.canada.ca/etc/designs/canada/wet-boew/assets/feedback/page-feedback-en.html') ^>" class="wb-disable-allow" data-feedback-link="<%= pr.showFeedback.text %>" data-feedback-url="<%= pr.showFeedback.url %>" data-feedback-section="<%= pr.showFeedback.section %>" data-feedback-theme="<%= pr.showFeedback.theme %>"></div>
             </div>
         <%_ } -%>
-        <%_ if (pr.showShare != null) { -%>
+        <%_ if (pr.showShare != false) { -%>
             <%_ if (pr.showShare != null && Array.isArray(pr.showShare)) { -%>                    
-                <div class="wb-share col-sm-4 col-md-3 <%- (pr.showFeedback == null)? 'col-sm-push-8 col-md-push-9' : ''%>" data-wb-share='{"filter": [<%- pr.showShare.map(function (i) {return '"' + i + '"';}).join(', ') %>], "lnkClass": "btn btn-default btn-block"}'></div>
-                <%_ } else { -%>
-                <div class="wb-share col-sm-4 col-md-3 <%- (pr.showFeedback == null)? 'col-sm-push-8 col-md-push-9' : ''%>" data-wb-share='{"lnkClass": "btn btn-default btn-block"}' ></div>
+                <div class="wb-share col-sm-4 col-md-3 <%- (pr.showFeedback.enabled != true)? 'col-sm-push-8 col-md-push-9' : ''%>" data-wb-share='{"filter": [<%- pr.showShare.map(function (i) {return '"' + i + '"';}).join(', ') %>], "lnkClass": "btn btn-default btn-block"}'></div>
+            <%_ } else { -%>
+                <div class="wb-share col-sm-4 col-md-3 <%- (pr.showFeedback.enabled != true)? 'col-sm-push-8 col-md-push-9' : ''%>" data-wb-share='{"lnkClass": "btn btn-default btn-block"}' ></div>
             <%_ } -%>
         <%_ } -%>
-        <div class="<%- (pr.showFeedback == null && pr.showShare != null)? 'col-sm-6 col-md-5 col-lg-4 col-sm-pull-4 col-md-pull-3' : 'col-xs-12' %>">
+        <div class="<%- (pr.showFeedback.enabled != true && pr.showShare != false)? 'col-sm-6 col-md-5 col-lg-4 col-sm-pull-4 col-md-pull-3' : 'col-xs-12' %>">
             <dl id="wb-dtmd">
                 <%_ if (pr.screenIdentifier != null) { -%>
                     <dt><^- msg('Screen Identifier:') ^>&#32;</dt>
